Search Form add.

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-    <h1>Not found baby</h1>
-
+    {% block page_title %}
+        Not found
+    {% endblock page_title %}
 
 {% endblock content %} 
