--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -7,6 +7,8 @@ Sign Up
 {% block search-bar %}
 {% endblock search-bar %}
 
+{% include 'partials/social_login.html' %}
+
 {% block content %}
 <form method="POST" action="{% url " users:signup" %}">
     {% csrf_token %}
